--- a/public/styles.css
+++ b/public/styles.css
@@ -3,9 +3,22 @@ body {
     background: rgb(129, 129, 129);
 }
 
+.fullcover {
+    width: 100vw;
+    height: 100vh;
+}
+
+.time {
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2vw;
+}
+
 .full {
     width: 100%;
-    height: 95vh;
+    height: 90vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
