--- a/public/styles.css
+++ b/public/styles.css
@@ -42,11 +42,36 @@ body {
 }
 
 .section-content {
-    height: 80%;
+    height: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-weight: 700;
     font-size: 8vw;
+}
+
+.section-date {
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: italic;
+    font-size: 3vw;
+}
+
+.section-upcoming {
+    margin-top: 10%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 2vw;
+    color: gray;
+}
+
+.upcoming {
+    margin-top: 5px;
 }
 
 .section-divider {
